test/resources/nameAnalyzer/failing/UndefinedType.amy
object UndefinedType
  def foo(): SomeType := 42 end foo
end UndefinedType
